Fix several Home layout bugs

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,3 +1,4 @@
+/* Layout */
 body {
   margin: 0;
 }
@@ -6,12 +7,23 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100%;
+
+  .ant-layout {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+  }
 }
 
-#root .ant-layout {
-  min-height: 100vh;
+.main-content {
+  flex: 1 0 auto;
 }
 
+.main-footer {
+  flex-shrink: 0;
+}
+
+/* Util-classes */
 .visually-hidden {
   position: absolute;
   left: -10000px;
@@ -21,6 +33,11 @@ body {
   overflow: hidden;
 }
 
+.centered {
+  margin: auto !important;
+}
+
+/* Containers */
 .container {
   display: flex;
   flex-direction: column;
@@ -30,10 +47,6 @@ body {
   margin: 0 auto;
   padding: 1rem;
   padding-top: 3rem;
-}
-
-.centered {
-  margin: auto !important;
 }
 
 .divider {
