--- a/client/src/pages/Home/styles/HomeSpells.module.scss
+++ b/client/src/pages/Home/styles/HomeSpells.module.scss
@@ -2,3 +2,7 @@
   padding-bottom: 3rem;
   background-color: white;
 }
+
+.title {
+  text-align: center;
+}
